src/app/features/add-task/pages/add-task-page/_form-inputs.scss
.add-task-content {
  label {
    font-size: 20px;
    font-weight: 400;
    color: #2a3647;

    span {
      color: #e60026;
    }
  }

  input:focus,
  textarea:focus,
  select:focus {
    outline: none;
    border: 1px solid #29abe2;
    box-shadow: none;
  }

  ::placeholder {
    font-size: 20px;
    color: #d1d1d1;
    font-weight: 400;
  }

  .main-content {
    input,
    textarea {
      width: 100%;
      box-sizing: border-box;
    }

    input {
      border-radius: 10px;
      padding: 12px 21px;
      height: 48px;
      border: 1px solid #d1d1d1;

      &:hover {
        cursor: pointer;
      }
    }

    textarea {
      font-size: 20px;
      min-height: 120px;
      max-height: 120px;
      padding: 12px 21px;
      border-radius: 10px;
      border: 1px solid #d1d1d1;
      font-weight: 400;

      &:hover {
        cursor: pointer;
      }
    }

    input[type='date'] {
      font-size: 20px;
      color: black;
    }

    .input-date-wrapper {
      position: relative;
      width: 100%;

      .input-date {
        padding-right: 44px;

        &::-webkit-calendar-picker-indicator {
          opacity: 0;
          cursor: pointer;

          @media (any-pointer: fine) {
            position: absolute;
            right: 0;
            top: 0;
            height: 44px;
            width: 44px;
          }
        }
      }

      @supports (-moz-appearance: none) {
        .date-icon {
          display: none;
        }
      }

      .date-icon {
        position: absolute;
        right: 14px;
        top: 50%;
        transform: translateY(-50%);
        width: 20px;
        height: 20px;
        pointer-events: none;
      }
    }

    input.invalid {
      border: 2px solid #e60026;
    }

    .if {
      height: 25px;
      color: #e60026;
      margin: 0;
    }
  }
}

